# DWES-UT04-Practica-2025-2026-AplicacionGestionTareasClase

./: README.md  pyproject.toml
App_TareasClase/: manage.py
App_TareasClase/App_TareasClase/: asgi.py  settings.py  urls.py  wsgi.py
App_TareasClase/App_TareasClase/templates/: base.html
App_TareasClase/TareasDWES/: admin.py  apps.py  models.py  urls.py  views.py
App_TareasClase/TareasDWES/migrations/: 0001_initial.py  0002_alter_usuario_id_tarea_tareagrupal.py  0002_tarea_tareagrupal.py
App_TareasClase/TareasDWES/templates/: listado_usuarios.html
