[tool.poetry]
name = "dwes-ut04-practica-2025-2026-aplicaciongestiontareasclase"
version = "0.1.0"
description = ""
authors = ["rdaniz <dani_pmz@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=5.1,<5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
